Fix issue with turn ending and duplicating chat