@@ -3,24 +3,24 @@ package net.deckserver.storage.json.game;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import net.deckserver.game.jaxb.actions.Turn;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Data
 @NoArgsConstructor
 public class TurnHistory {
-    private List<TurnData> turns = new ArrayList<>();
-
-    @JsonIgnore
-    private Map<String, TurnData> turnMap = new HashMap<>();
+    private String currentTurn;
+    private String currentPlayer;
+    private Map<String, TurnData> turnMap = new LinkedHashMap<>();
 
     public TurnHistory(List<TurnData> turns) {
-        this.turns = turns;
-        this.turnMap = turns.stream().collect(Collectors.toMap(TurnData::getLabel, turn -> turn));
+        turns.forEach(turn -> {
+            turnMap.put(turn.getLabel(), turn);
+        });
+        this.currentTurn = turns.getLast().getTurnId();
+        this.currentPlayer = turns.getLast().getPlayer();
     }
 
     @JsonIgnore
@@ -30,34 +30,38 @@ public class TurnHistory {
 
     @JsonIgnore
     public List<String> getTurnLabels() {
-        return turns.stream().map(TurnData::getLabel).collect(Collectors.toList()).reversed();
+        return turnMap.keySet().stream().toList().reversed();
     }
 
     public void addTurn(TurnData turn) {
-        turns.add(turn);
         turnMap.put(turn.getLabel(), turn);
+        currentPlayer = turn.getPlayer();
+        currentTurn = turn.getTurnId();
     }
 
     public void addTurn(String player, String turnId) {
         TurnData turn = new TurnData(player, turnId);
-        turns.add(turn);
         turnMap.put(turn.getLabel(), turn);
+        currentTurn = turnId;
+        currentPlayer = player;
     }
 
     @JsonIgnore
     public String getCurrentTurn() {
-        return turns.getLast().getTurnId();
+        return currentTurn;
     }
 
     @JsonIgnore
     public String getCurrentTurnLabel() {
-        if (turns.isEmpty()) {
-            return null;
-        }
-        return turns.getLast().getLabel();
+        return String.format("%s %s", currentPlayer, currentTurn);
     }
 
     public void addChat(ChatData chatData) {
-        turns.getLast().addChat(chatData);
+        String currentLabel = getCurrentTurnLabel();
+        turnMap.getOrDefault(currentLabel, new TurnData(currentPlayer, currentTurn)).addChat(chatData);
+    }
+
+    public Collection<TurnData> getTurns() {
+        return turnMap.values();
     }
 }
